--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,35 +1,48 @@
 .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem 0;
-    height: 10vh;
-  }
-  
-  .main-logo {
-    color: white;
-    font-size: 2.5rem;
-  }
-  
-  .nav ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-  }
-  
-  .nav ul li {
-    padding-right: 2rem;
-    font-size: 2rem;
-    cursor: pointer;
-  }
-  
-  .user {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .guest {
-    display: flex;
-    flex-direction: row;
-  }
-  
+  display: flex;
+  align-items: center;
+  padding: 1.5rem 0;
+  height: 10vh;
+  background-color: #31c48d;
+}
+
+.main-logo {
+  color: white;
+  font-size: 2.5rem;
+  width: 45%;
+  display: flex;
+  flex-direction: row;
+}
+
+.main-logo-container {
+  height: 100%;
+}
+
+.logo {
+  height: 120px;
+  width: 200px;
+  object-fit: contain;
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  width: 50%;
+}
+
+.nav ul li {
+  padding-right: 2rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.user {
+  display: flex;
+  flex-direction: row;
+}
+
+.guest {
+  display: flex;
+  flex-direction: row;
+}
