--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,26 +1,36 @@
+@media screen and (max-width: 600px) {
+  .nav {
+    flex-direction: column;
+    height: 20vh;
+  }
+}
+
 .nav {
   display: flex;
   align-items: center;
   padding: 1.5rem 0;
-  height: 10vh;
+  height: 15vh;
+  max-height: 25vh;
   background-color: #31c48d;
 }
 
 .main-logo {
   color: white;
   font-size: 2.5rem;
-  width: 45%;
+  width: 50%;
   display: flex;
   flex-direction: row;
 }
 
 .main-logo-container {
-  height: 100%;
+  width: 30%;
 }
 
 .logo {
-  height: 120px;
-  width: 200px;
+  display: block;
+  padding: 1rem;
+  height: 98%;
+  width: 95%;
   object-fit: contain;
 }
 
