--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -17,8 +17,9 @@
 
 .home-img {
     position: absolute;
-    top: -310px;
+    top: -215px;
     width: 100%;
+    max-height: 1080px;
     object-fit: cover;
     z-index: -1;
 }
