--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,32 +5,44 @@
   }
 }
 
+
+
 .nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 1.5rem 0;
   height: 15vh;
   max-height: 25vh;
+  width: 100%;
   background-color: #31c48d;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
 .main-logo {
   color: white;
   font-size: 2.5rem;
-  width: 50%;
+  width: 100%;
+  max-width: 350px;
   display: flex;
   flex-direction: row;
 }
 
 .main-logo-container {
   width: 30%;
+  height: 30%;
 }
 
 .logo {
   display: block;
   padding: 1rem;
   height: 98%;
-  width: 95%;
+  width: 80%;
   object-fit: contain;
 }
 
