--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -10,7 +10,6 @@
 .nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: 1.5rem 0;
   height: 15vh;
   max-height: 25vh;
@@ -21,10 +20,11 @@
 .nav-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
 }
 
-.main-logo {
+.nav-logo {
   color: white;
   font-size: 2.5rem;
   width: 100%;
@@ -33,9 +33,13 @@
   flex-direction: row;
 }
 
-.main-logo-container {
+.nav-logo-container {
   width: 30%;
   height: 30%;
+}
+
+.nav-list-container {
+  margin-right: 2.5rem;
 }
 
 .logo {
