--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,25 +1,21 @@
 .home-container {
-    width: 100%;
-    height: 80vh;
+  width: 100%;
+  height: 900px;
 }
 
 .home-section {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .home-img-container {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
+  height: 900px;
 }
 
 .home-img {
-    position: absolute;
-    top: -215px;
-    width: 100%;
-    max-height: 1080px;
-    object-fit: cover;
-    z-index: -1;
+  /* top: -215px; */
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
+  z-index: -1;
 }
