--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,8 +5,6 @@
   }
 }
 
-
-
 .nav {
   display: flex;
   align-items: center;
@@ -15,6 +13,8 @@
   max-height: 25vh;
   width: 100%;
   background-color: #31c48d;
+  -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
 }
 
 .nav-container {
