--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -1,9 +1,9 @@
 .register-section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   /* justify-content: center; */
   align-items: center;
-  width: 30%;
+  width: 50%;
   height: 100%;
   margin: 2.5rem auto;
   background-color: white;
@@ -12,17 +12,40 @@
   box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
 }
 
+.register-section-container {
+  display: flex;
+  width: 100%;
+}
+
+.register-img-container {
+  height: 100%;
+  width: 50%;
+}
+
+.register-img {
+  width: 100%;
+  height: 820px;
+  object-fit: cover;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.register-form-container {
+  margin: 0 auto;
+}
+
 .register-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 80%;
   padding: 0.5rem;
 }
 
 .register-title {
   font-size: 3rem;
   padding: 0.8rem 0;
+  text-align: center;
+  margin: 1rem 0;
 }
 
 .register-form label {
