--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -1,121 +1,146 @@
 .create-section {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    width: 30%;
-    height: 100%;
-    margin: 2rem auto;
-    background-color: white;
-    border-radius: 1rem;
-    -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
-  }
-  
-  .create-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 80%;
-  }
-  
-  .create-title {
-    font-size: 2.6rem;
-    padding: 1.5rem 0;
-  }
-  
-  .create-form label {
-    font-size: 1.4rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    margin-bottom: 0.2rem;
-  }
-  
-  .create-name,
-  .create-desc,
-  .create-type,
-  .create-tel,
-  .create-price,
-  .create-img {
-    border: 1px solid black;
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .create-name::placeholder,
-  .create-desc::placeholder,
-  .create-type::placeholder,
-  .create-tel::placeholder,
-  .create-price::placeholder,
-  .create-img::placeholder {
-    padding-left: 0.5rem;
-    padding-bottom: 0.5rem;
-    color: gray;
-  }
-  
-  .create-desc {
-    height: 120px;
-  }
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  width: 60%;
+  height: 100%;
+  margin: 2.5rem auto;
+  background-color: white;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+}
 
-  .create-offer-label {
-    display: flex;
-    align-items: center;
-  }
+.create-section-container {
+  display: flex;
+  width: 100%;
+  height: 900px;
+}
 
-  .create-offer {
-    margin-left: 1rem;
-    height: 1.5rem;
-    width: 1.5rem;
-  }
+.create-img-container {
+  height: 100%;
+  width: 100%;
+}
 
-  .create-offer :checked {
-    background: #31c48d;
-  }
+.create-img {
+  width: 100%;
+  height: 900px;
+  object-fit: cover;
+  margin: unset;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
 
+.create-form-container {
+  width: 100%;
+  margin: 0 auto;
+}
 
-  
-  .create-btn {
-    margin: 1rem 0;
-    font-size: 1.5rem;
-    background-color: #31c48d;
-    color: white;
-    border: none;
-    padding: 0.8rem;
-    border-radius: 1rem;
-    margin-bottom: 2.2rem;
-    width: 40%;
-    cursor: pointer;
-  }
-  
-  .inactive {
-    margin: 1rem 0;
-    font-size: 1.5rem;
-    background-color: #31c48e75;
-    color: white;
-    border: none;
-    padding: 0.8rem;
-    border-radius: 1rem;
-    margin-bottom: 2.2rem;
-    width: 40%;
-  }
-  
-  .create-btn-wrapper {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-  }
-  
-  .create-cancel {
-      text-align: center;
-      text-decoration: none;
-      margin: 1rem 0;
-      font-size: 1.5rem;
-      background-color: #e40f0f;
-      color: white;
-      border: none;
-      padding: 0.8rem;
-      border-radius: 1rem;
-      margin-bottom: 2.2rem;
-      width: 40%;
-  }
+.create-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 65%;
+  margin: 0 auto;
+}
+
+.create-title {
+  font-size: 2.3rem;
+  padding-top: 1rem;
+  text-align: center;
+}
+
+.create-form label {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-top: 0.3rem;
+  /* margin-bottom: 0.2rem; */
+}
+
+.create-name,
+.create-desc,
+.create-type,
+.create-tel,
+.create-price,
+.create-img {
+  border: 1px solid black;
+  font-size: 1.2rem;
+  margin-bottom: 0.3rem;
+}
+
+.create-name::placeholder,
+.create-desc::placeholder,
+.create-type::placeholder,
+.create-tel::placeholder,
+.create-price::placeholder,
+.create-img::placeholder {
+  padding-left: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: gray;
+}
+
+.create-desc {
+  height: 120px;
+}
+
+.create-offer-label {
+  display: flex;
+  align-items: center;
+}
+
+.create-offer {
+  margin-left: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.create-offer :checked {
+  background: #31c48d;
+}
+
+.create-btn {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  background-color: #31c48d;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  margin-bottom: 2.2rem;
+  width: 40%;
+  cursor: pointer;
+}
+
+.inactive {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  background-color: #31c48e75;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  margin-bottom: 2.2rem;
+  width: 40%;
+}
+
+.create-btn-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.create-cancel {
+  text-align: center;
+  text-decoration: none;
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  background-color: #e40f0f;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  margin-bottom: 2.2rem;
+  width: 40%;
+}
