--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -1,108 +1,111 @@
 .details-section {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    width: 70%;
-    height: 100%;
-    margin: 2rem auto;
-    background-color: white;
-    border-radius: 1rem;
-    -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
-  }
-  
-  .details-container {
-    background-color: white;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .details-title {
-    width: 100%;
-    text-align: center;
-    font-size: 3rem;
-    border-bottom: 2px solid #31c48d;
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
-  }
-  
-  .details-img-container {
-    width: 50%;
-  }
-  
-  .details-img {
-      display: flex;
-      object-fit: contain;
-      max-height: fit-content;
-      width: 70%;
-      /* height: 250px; */
-  }
-  .details-info-container {
-    width: 40%;
-    text-align: center;
-    margin: 2rem 3rem;
-  }
-  
-  .details-info-list {
-    text-align: start;
-    list-style: none;
-    padding-left: unset;
-  }
-  
-  .details-info-item {
-    font-size: 2rem;
-  }
-  
-  .details-info-item p {
-      word-wrap: break-word;
-      line-height: 1.5;
-      font-weight: lighter;
-  }
-  
-  .details-info-accent {
-    font-weight: bold;
-    width: 100%;
-  }
-  
-  .details-btn-wrapper {
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-  }
-  
-  .details-btn-edit {
-     margin-right: 2rem;
-      text-decoration: none;
-      text-align: center;
-      font-size: 1.8rem;
-      background-color: #81caeb;
-      color: white;
-      border: none;
-      padding: 0.8rem;
-      border-radius: 1rem;
-      margin-bottom: 2.2rem;
-      width: 15%;
-      cursor: pointer;
-  }
-  
-  .details-btn-delete {
-      text-decoration: none;
-      text-align: center;
-      font-size: 1.8rem;
-      background-color: red;
-      color: white;
-      border: none;
-      padding: 0.8rem;
-      border-radius: 1rem;
-      margin-bottom: 2.2rem;
-      width: 15%;
-      cursor: pointer;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  width: 80%;
+  height: 600px;
+  margin: 2rem auto;
+  background-color: white;
+  -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+}
+
+.details-container {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.details-title {
+  width: 100%;
+  text-align: center;
+  font-size: 2.5rem;
+  border-bottom: 2px solid #31c48d;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+}
+
+.details-img-container {
+  width: 50%;
+}
+
+.details-img {
+  display: flex;
+  object-fit: cover;
+  width: 100%;
+  height: 600px;
+
+}
+.details-info-container {
+  width: 40%;
+  height: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.details-info-list {
+  text-align: start;
+  list-style: none;
+  padding-left: unset;
+}
+
+.details-info-item {
+  font-size: 2rem;
+}
+
+.details-info-item p {
+  word-wrap: break-word;
+  line-height: 1.5;
+  font-weight: lighter;
+}
+
+.details-info-accent {
+  font-weight: bold;
+  width: 100%;
+}
+
+.details-btn-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15rem;
+}
+
+.details-btn-edit {
+  margin-right: 2rem;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.8rem;
+  background-color: #31c48eaf;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  margin-bottom: 2.2rem;
+  width: 40%;
+  cursor: pointer;
+}
+
+.details-btn-delete {
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.8rem;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 1rem;
+  margin-bottom: 2.2rem;
+  width: 40%;
+  cursor: pointer;
+}
