--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -1,11 +1,29 @@
 .offer-section {
-    width: 100%;
-    height: 70vh;
-    margin-top: 3rem;
+  width: 100%;
+  height: 70vh;
+  margin-top: 3rem;
 }
 
 .offer-section-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 60vh;
+  width: 95%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+}
+
+.offer-list-container {
+  height: 50vh;
+}
+
+.offer-title {
+    padding-top: 1rem;
+    text-align: center;
+    margin: 0 auto;
+    width: 90%;
+    border-bottom: 2px solid #31c48d;
+    padding-bottom: 1rem;
 }
