--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -10,8 +10,8 @@
   height: 65vh;
   width: 95%;
   margin: 0 auto;
-  -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  /* -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3); */
   border-radius: 1rem;
 }
 
