--- a/client/src/components/CatalogCard/CatalogCard.css
+++ b/client/src/components/CatalogCard/CatalogCard.css
@@ -8,6 +8,8 @@
   flex-wrap: wrap;
   background-color: white;
   margin-bottom: 2rem;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 .catalog-card {
@@ -30,7 +32,7 @@
 }
 
 .catalog-card-title {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   margin: 0.2rem;
   word-wrap: break-word;
 }
