--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -77,3 +77,22 @@
   color: white;
 }
 
+.catalog-left-side {
+  flex: 1;
+  -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  height: 100%;
+}
+
+.catalog-categories {
+  padding: 2rem; 
+  text-align: center;   
+}
+
+.catalog-content {
+  display: flex;
+  flex: 4;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
