--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -79,8 +79,8 @@
 
 .catalog-left-side {
   flex: 1;
-  -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
+  box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
   border-radius: 1rem;
   height: 100%;
 }
