added some styles to catalog and filter

--- a/client/src/components/Filter/Filter.css
+++ b/client/src/components/Filter/Filter.css
@@ -2,6 +2,11 @@
   cursor: pointer;
 }
 
+.catalog-category-item {
+    padding-bottom: 2px;
+}
 .active {
   font-weight: bold;
+  font-size: 1.2rem;
+  color: #31c48d;
 }
