--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -94,5 +94,7 @@
   display: flex;
   flex: 4;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
