--- a/client/src/components/CatalogCard/CatalogCard.css
+++ b/client/src/components/CatalogCard/CatalogCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   grid-area: card;
-  width: calc((100% / 4) - 1.5rem);
+  width: 220px;
   -webkit-box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 8px 14px 5px rgba(0, 0, 0, 0.3);
   height: 416px;
