--- a/client/src/components/CatalogCard/CatalogCard.css
+++ b/client/src/components/CatalogCard/CatalogCard.css
@@ -1,5 +1,6 @@
 .catalog-card-container {
   display: flex;
+  position: relative;
   flex-direction: column;
   grid-area: card;
   width: 220px;
@@ -15,28 +16,43 @@
 }
 
 .catalog-card {
-  height: 98px;
-  width: 95%;
-  justify-content: center;
+  /* height: 98px; */
+  position:absolute;
+  height: 100%;
+  width: 100%;
+  /* justify-content: center;
   text-align: center;
-  padding: 1rem;
-  margin-left: 0.5rem;
+  padding: 1rem; */
+  /* margin-left: 0.5rem; */
 }
 
 .catalog-img-container {
+  position: absolute;
+  height: 100%;
   width: 100%;
 }
 
 .catalog-card-img {
   width: 100%;
-  height: 250px;
+  height: 100%;
   object-fit: cover;
 }
 
+
 .catalog-card-title {
-  font-size: 1.2rem;
-  margin: 0.2rem;
-  word-wrap: break-word;
+  position: absolute;
+    display: flex;
+    width: 100%;
+    /* background-color: rgba(0, 0, 0, 0.3); */
+    text-shadow: 1px 2px 4px rgba(0,0,0,0.4);
+    font-size: 1.3rem;
+    color: white;
+    bottom: 250px;
+    /* margin: 0.2rem; */
+    word-wrap: break-word;
+    /* text-align: center; */
+    /* align-items: center; */
+    justify-content: center;
 }
 
 .catalog-card-desc {
@@ -52,6 +68,9 @@
 
 .catalog-card-link {
   display: flex;
+  position: absolute;
+  bottom:0px ;
+  background-color: rgba(0, 0, 0, 0.3);
   justify-content: center;
   text-decoration: none;
   font-size: 1.5rem;
@@ -60,5 +79,7 @@
   color: white;
   margin: 0 auto;
   padding: 1rem 0;
-  background-color: #31c48d;
+  /* background-color: #31c48d; */
 }
+
+
