--- a/client/src/components/ImageCard/ImageCard.css
+++ b/client/src/components/ImageCard/ImageCard.css
@@ -1,4 +1,5 @@
 .image-card {
+  position: relative;
   height: 46vh;
   width: 25%;
   display: flex;
@@ -12,9 +13,10 @@
 }
 
 .image-card-container {
-  height: 70%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
   overflow: hidden;
 }
 
@@ -27,6 +29,14 @@
 }
 
 .image-title {
+  position: absolute;
+  bottom: 15%;
+  height: 2rem;
+  /* left: calc(50% - 43px); */
   text-align: center;
   margin-top: 0.8rem;
+  color: white;
+  text-shadow: 1px 2px 4px rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
