minor css changes

--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -50,8 +50,8 @@
 .search-title {
     width: 100%;
     text-align: center;
-    color: white;
-    font-size: 2.5rem;
+    color: black;
+    font-size: 1.5rem;
     padding-bottom: 2rem;
     margin-bottom: 2rem;
     border-bottom: 2px solid white;
