--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -51,8 +51,10 @@
   color: black;
   font-size: 2.5rem;
   padding-bottom: 2rem;
-  margin-top: 2rem;
+  margin-top: 2.5rem;
   border-bottom: 2px solid white;
+  text-shadow: 1px 2px 4px rgba(0,0,0,0.2);
+
 }
 
 .catalog-container {
@@ -95,6 +97,6 @@
   flex: 4;
   flex-wrap: wrap;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 2rem;
 }
