--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -13,6 +13,8 @@
     padding-left: 0;
     justify-content: center;
     align-items: center;
+    text-shadow: 1px 2px 4px rgba(0,0,0,0.4);
+
 }
 
 .footer-list-container{
