--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,4 +1,5 @@
 .home-container {
+  position: relative;
   width: 100%;
   height: 900px;
 }
@@ -6,6 +7,48 @@
 .home-section {
   width: 100%;
   height: 100%;
+}
+
+.home-section-title{
+  position:absolute;
+  color: white;
+  font-size: 2.5rem;
+  left: 4%;
+  top: 30%;
+  text-shadow: 1px 2px 4px rgba(255, 255, 255, 0.4);
+  
+}
+
+.home-section-paragraph{
+  position: absolute;
+  color: white;
+  font-size: 1rem;
+  width: 40%;
+  left: 4%;
+  top:38%;
+  text-shadow: 1px 2px 4px rgba(255, 255, 255, 0.4);
+
+}
+
+.home-section-btn{
+  cursor: pointer;
+  position:absolute;
+  color: white;
+  background-color: #31c48d;
+  font-size: 1.2rem;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+  border-color: transparent;
+  left:4%;
+  top:50%;
+  -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+}
+
+.home-section-btn-link{
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.4);
+  text-decoration: none;
+  color: white;
 }
 
 .home-img-container {
