--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -27,4 +27,6 @@
     width: 90%;
     border-bottom: 2px solid #31c48d;
     padding-bottom: 1rem;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+    
 }
