--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -80,6 +80,8 @@
 }
 
 .catalog-left-side {
+  position: sticky;
+  top:20%;
   flex: 1;
   -webkit-box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
   box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
