--- a/client/src/components/ImageCard/ImageCard.css
+++ b/client/src/components/ImageCard/ImageCard.css
@@ -1,14 +1,14 @@
 .image-card {
   position: relative;
-  height: 46vh;
-  width: 25%;
+  height: 400px;
+  width: 23%;
   display: flex;
   flex-direction: column;
   margin-left: 2rem;
   margin-top: 1.5rem;
   border-radius: 1rem;
-  -webkit-box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 15px -3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 15px -3px rgb(0 0 0 / 50%);
+  min-width: 300px;
   
 }
 
