--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -37,13 +37,14 @@
 .details-img-container {
   width: 50%;
   height: 100%;
+  max-width: 600px;
 }
 
 .details-img {
   display: flex;
   object-fit: cover;
   width: 100%;
-  height: 600px;
+  height: 610px;
 
 }
 .details-info-container {
@@ -51,6 +52,7 @@
   height: 100%;
   text-align: center;
   margin: 0 auto;
+  z-index: 2;
 }
 
 .details-info-list {
