changes to message controller and chatpopup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@ dd {
   margin: 0;
 }
 
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
@@ -79,6 +80,7 @@ select {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  min-height: 100vh;
   width: 100%;
   margin: 0 auto;
 }
