--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -4,6 +4,7 @@
   /* justify-content: center; */
   align-items: center;
   width: 60%;
+  min-height: 100vh;
   height: 100%;
   margin: 2.5rem auto;
   background-color: white;
