--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer-container{
     display: flex;
     flex-direction: column;
-    height: 20vh;
+    /* height: 20vh; */
     background-color: #31c48d;
     font-size: 1.5rem;
 }
@@ -38,6 +38,7 @@
     cursor: pointer;
     font-size: 1.8rem;
     padding-right: 2.5rem;
+    padding-bottom: 1rem;
 }
 
 .footer-list-item-link {
