--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    min-height: 100vh;
     width: 90%;
     margin: 2rem auto;
 }
@@ -71,6 +72,7 @@
 .search-result-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     width: 95%;
     margin: 0 auto;
