--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 code {
@@ -17,4 +20,5 @@ code {
 #root {
   width: 100%;
   margin: 0 auto;
+  flex-grow: 1;
 }
