--- a/client/src/components/ChatFeed/ChatFeed.css
+++ b/client/src/components/ChatFeed/ChatFeed.css
@@ -1,23 +1,65 @@
 .feed-content-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, minmax(40px, 1fr));
+  grid-gap: 10px;
   width: 100%;
   height: 95%;
   overflow-y: auto;
-  display: flex;
-  flex-direction: column;
   align-items: baseline;
   justify-content: end;
 }
 
-.feed-conent-container::-webkit-scrollbar {
-  width: 0px;
+.feed-content-container::-webkit-scrollbar{
+  width: 6px;
+}
+
+.feed-content-container::-webkit-scrollbar-thumb{
+  background-color: #b3f8cd;
 }
 
 .feed-content-text {
+  background-color: #bee3f8;
+  border-radius: 20px;
+  padding: 5px 15px;
+  max-width: 75%;
+  grid-column: 1 / 2;
+}
+
+.feed-content-text.from-user {
   background-color: #bee3f8;
   margin-top: 3px;
   border-radius: 20px;
   padding: 5px 15px;
   max-width: 75%;
-  margin-left: 3px;
+  margin-left: auto;
   margin-right: 3px;
+}
+
+.feed-content-text.from-other {
+  background-color: #b9f5d0;
+  margin-top: 3px;
+  border-radius: 20px;
+  padding: 5px 15px;
+  max-width: 75%;
+  margin-left: 3px;
+  margin-right: auto;
+}
+
+.time-stamp {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  color: gray;
+  font-size: 12px;
+  z-index: 1;
+}
+
+.left {
+  left: 172px;
+}
+
+.right {
+  right: 140px;
 }
