--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -44,8 +44,8 @@
 
 .profile-chats-list {
     width: 95%;
-    min-height: 50%;
-    max-height: 90%;
+    height: 50vh;
+    max-height: 100%;
     border-radius: 1rem;
     margin-top: 1.4rem;
     margin-left: 2rem;
