--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-
 .nav {
   display: flex;
   align-items: center;
@@ -6,7 +5,7 @@
   height: 15vh;
   max-height: 25vh;
   width: 100%;
-  background-color: #31c48d; 
+  background-color: #31c48d;
   -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
 }
@@ -28,8 +27,8 @@
 }
 
 .nav-logo-container {
-  width: 30%;
-  height: 30%;
+  min-width: 150px;
+  min-height: 150px;
 }
 
 .nav-list-container {
@@ -39,8 +38,8 @@
 .logo {
   display: block;
   padding: 1rem;
-  height: 98%;
-  width: 45%;
+  height: 150px;
+  width: 150px;
   object-fit: contain;
 }
 
@@ -55,8 +54,7 @@
   padding-right: 2rem;
   font-size: 2rem;
   cursor: pointer;
-  text-shadow: 1px 2px 4px rgba(0,0,0,0.4);
-
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .user {
@@ -67,4 +65,88 @@
 .guest {
   display: flex;
   flex-direction: row;
+}
+
+.burger-menu {
+  display: none;
+  font-size: 2rem;
+  margin-right: 2rem;
+  color: white;
+}
+
+@media only screen and (max-width: 820px) {
+  .nav-list-container {
+    position: relative;
+  }
+
+  .nav ul {
+    position: absolute;
+    top: 70px;
+    width: 300px;
+    height: 30vh;
+    background: #31c48d;
+    flex-direction: column;
+    -webkit-box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease-in-out;
+  }
+  .nav ul li:nth-child(1) {
+    margin-top: 1rem;
+  }
+
+  .user {
+    flex-direction: column;
+  }
+
+  .nav ul.active {
+    left: 88px;
+    z-index: 2;
+  }
+
+  .nav ul.deactive {
+    left: 390px;
+  }
+
+  .burger-menu {
+    display: flex;
+    font-size: 2.5rem;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .nav-list-container {
+    position: relative;
+  }
+
+  .nav ul {
+    position: absolute;
+    top: 33px;
+    width: 375px;
+    height: 60vh;
+    background: #31c48d;
+    flex-direction: column;
+    box-shadow: 0px 8px 14px 0px rgb(0 0 0 / 30%);
+    transition: 0.3s ease-in-out;
+  }
+  .nav ul li:nth-child(1) {
+    margin-top: 1rem;
+  }
+
+  .user {
+    flex-direction: column;
+  }
+
+  .nav ul.active {
+    left: -214px;
+    z-index: 2;
+  }
+
+  .nav ul.deactive {
+    left: 170px;
+  }
+
+  .burger-menu {
+    display: flex;
+    font-size: 2.5rem;
+  }
 }
