--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -62,3 +62,10 @@
   object-fit: cover;
   z-index: -1;
 }
+
+
+@media only screen and (max-width: 820px) {
+  .home-section-btn {
+    top: 56%;
+  }
+}
