--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 70vh;
   margin-top: 3rem;
+  min-height: 550px;
 }
 
 .offer-section-container {
@@ -22,12 +23,31 @@
 }
 
 .offer-title {
-    padding-top: 1rem;
-    text-align: center;
-    margin: 0 auto;
-    width: 90%;
-    border-bottom: 2px solid #31c48d;
-    padding-bottom: 1rem;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.4);
-    
+  padding-top: 1rem;
+  text-align: center;
+  margin: 0 auto;
+  width: 90%;
+  border-bottom: 2px solid #31c48d;
+  padding-bottom: 1rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+@media only screen and (max-width: 820px) {
+  .offer-section {
+    width: 100%;
+    height: 85vh;
+    margin-top: 3rem;
+    min-height: 550px;
+  }
+  .offer-section-container {
+    width: 100%;
+  }
+  .offer-list-container {
+    justify-content: center;
+    gap: 3rem;
+    margin-top: 2.5rem;
+  }
+  .offer-title {
+    width: 95%;
+  }
 }
