--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -53,8 +53,7 @@
   padding-bottom: 2rem;
   margin-top: 2.5rem;
   border-bottom: 2px solid white;
-  text-shadow: 1px 2px 4px rgba(0,0,0,0.2);
-
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .catalog-container {
@@ -81,7 +80,7 @@
 
 .catalog-left-side {
   position: sticky;
-  top:20%;
+  top: 20%;
   flex: 1;
   -webkit-box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
   box-shadow: 0px 4px 14px -2px rgb(0 0 0 / 25%);
@@ -90,8 +89,8 @@
 }
 
 .catalog-categories {
-  padding: 2rem; 
-  text-align: center;   
+  padding: 2rem;
+  text-align: center;
 }
 
 .catalog-content {
@@ -101,4 +100,20 @@
   align-items: center;
   /* justify-content: center; */
   gap: 2rem;
+}
+
+@media only screen and (max-width: 380px) {
+  .catalog-content {
+    justify-content: center;
+    gap: 0;
+  }
+  .catalog-left-side {
+    position: unset;
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  .catalog-left-side {
+    top: 29%;
+  }
 }
