--- a/client/src/components/ImageCard/ImageCard.css
+++ b/client/src/components/ImageCard/ImageCard.css
@@ -40,3 +40,10 @@
   background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
 }
+
+@media only screen and (max-width: 380px) {
+  .image-card {
+    margin-left: unset;
+    margin-top: unset;
+  }
+}
