--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -51,3 +51,14 @@
     width: 95%;
   }
 }
+
+@media only screen and (max-width: 380px) {
+  .offer-section {
+    min-height: 1760px;
+  }
+
+  .offer-list-container {
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+}
