--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -112,3 +112,29 @@
   width: 40%;
   cursor: pointer;
 }
+
+
+
+@media only screen and (max-width: 820px){
+  .details-section{
+    width: 95%;
+    height: 100%;
+  }
+  .details-container{
+    height: 1000px;
+  }
+}
+
+@media only screen and (max-width: 380px){
+  .slider{
+    width: 370px;
+  }
+
+  .details-img-container {
+    width: 370px;
+    height: 50%;
+  }
+  .details-info-container{
+    width: 80%;
+  }
+}
