--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,6 @@ dd {
   margin: 0;
 }
 
-
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
@@ -80,19 +79,24 @@ select {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 1750px;
   width: 100%;
   margin: 0 auto;
 }
-
 
 .alert {
   color: red;
   font-size: 1.2rem;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 820px) {
   .body-container {
-    width: 100%;
+    min-height: 2320px;
+  }
+}
+
+@media only screen and (max-width: 380px){
+  .body-container{
+    min-height: 3000px;
   }
 }
