--- a/client/src/components/ChatPopUp/ChatPopUp.css
+++ b/client/src/components/ChatPopUp/ChatPopUp.css
@@ -1,6 +1,6 @@
 .chat-container {
   padding: 12px;
-  position: fixed;
+  position: absolute;
   bottom: 25px;
   right: 25px;
   background: transparent;
@@ -47,16 +47,16 @@
 }
 
 .chat-window-content {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    height: 85%;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  height: 85%;
+  width: 100%;
 }
 
 .chat-window-content::-webkit-scrollbar {
-    width: 0px;
-  }
+  width: 0px;
+}
 
 .chat-input {
   position: absolute;
@@ -67,4 +67,39 @@
   border-bottom-right-radius: 1rem;
   padding-left: 1rem;
   padding-bottom: 8px;
+}
+
+@media only screen and (max-width: 820px) {
+  .chat-container {
+    font-size: 3.5rem;
+    width: 120px;
+    height: 120px;
+    bottom: -960px;
+  }
+
+  .chat-window {
+    position: absolute;
+    bottom: 155px;
+    width: 94%;
+    height: 750px;
+    bottom: -820px;
+  }
+
+  .chat-window-content{
+    height: 95%;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .chat-container {
+    bottom: -1800px;
+  }
+
+  .chat-window {
+    bottom: -1650px;
+    right: 11px;
+  }
+  .chat-window-content{
+    height: 97%;
+  }
 }
