--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,46 +1,77 @@
-.footer-container{
-    display: flex;
-    flex-direction: column;
-    /* height: 20vh; */
-    background-color: #31c48d;
-    font-size: 1.5rem;
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  /* height: 20vh; */
+  background-color: #31c48d;
+  font-size: 1.5rem;
+  margin-top: auto;
 }
 
 .footer-title {
-    display: flex;
-    color: white;
-    width: 100%;
-    padding-left: 0;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 1px 2px 4px rgba(0,0,0,0.4);
-
+  display: flex;
+  color: white;
+  width: 100%;
+  padding-left: 0;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-.footer-list-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+.footer-list-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .footer-list {
-    display: flex;
-    width: 100%;
-    list-style: none;
-    flex-direction: row;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
+  display: flex;
+  width: 100%;
+  list-style: none;
+  flex-direction: row;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
 }
 
 .footer-list-item {
-    cursor: pointer;
-    font-size: 1.8rem;
-    padding-right: 2.5rem;
-    padding-bottom: 1rem;
+  cursor: pointer;
+  font-size: 1.8rem;
+  padding-right: 2.5rem;
+  padding-bottom: 1rem;
 }
 
 .footer-list-item-link {
-    color: white;
+  color: white;
+}
+
+@media only screen and (max-width: 820px) {
+  .footer-container {
+    position: static;
+    bottom: -199px;
+    width: 100%;
+  }
+
+  .footer-list {
+    width: 40%;
+    justify-content: space-around;
+    margin: 0 auto;
+    padding: unset;
+  }
+
+  .footer-list-item {
+    padding-right: unset;
+    font-size: 2.5rem;
+  }
+
+  .footer-title {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .footer-container {
+    bottom: -511px;
+  }
 }
