--- a/client/src/components/ChatWindow/ChatWindow.css
+++ b/client/src/components/ChatWindow/ChatWindow.css
@@ -38,3 +38,9 @@
   padding-bottom: 8px;
   height: 2.8rem;
 }
+
+@media only screen and (max-width: 380px){
+  .chat-window-section{
+    width: 95%;
+  }
+}
