--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -145,3 +145,29 @@
   margin-bottom: 2.2rem;
   width: 40%;
 }
+
+@media only screen and (max-width: 820px) {
+  .create-section{
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .create-section{
+    width: 95%;
+  }
+
+  .create-section-container{
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .create-img-container{
+    height: 500px;
+  }
+  .create-img{
+    height: 500px;
+    border-bottom-left-radius: unset;
+    border-top-right-radius: 1rem;
+  }
+}
