--- a/client/src/components/Edit/Edit.css
+++ b/client/src/components/Edit/Edit.css
@@ -145,3 +145,31 @@
     width: 40%;
   }
   
+
+  @media only screen and (max-width:820px){
+    .edit-section{
+      width: 95%;
+    }
+
+  }
+
+  @media only screen and (max-width: 380px){
+    .edit-section{
+      width: 95%;
+    }
+
+    .edit-section-container{
+      flex-direction: column;
+      height: 100%;
+    }
+
+    .edit-img-container{
+      height: 500px;
+    }
+
+    .edit-img{
+      height: 500px;
+      border-bottom-left-radius: unset;
+      border-top-right-radius: 1rem;
+    }
+  }
