--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -107,3 +107,31 @@
   color: #31c48d;
   margin-bottom: 1rem;
 }
+
+@media only screen and (max-width: 820px){
+  .register-section{
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 380px){
+  .register-section{
+    width: 95%;
+  }
+
+  .register-section-container{
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .register-img-container{
+    height: 500px;
+    width: 100%;
+  }
+
+  .register-img{
+    height: 500px;
+    border-bottom-left-radius: unset;
+    border-top-right-radius: 1rem;
+  }
+}
